<resources>
    <string name="app_name">JustBeatIt</string>
    <string name="action_finger">Place finger!</string>
    <string name="scan_pause">Monitor has been paused.</string>
    <string name="scan_resume">Monitor has been resumed.</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_tutorial">Tutorial</string>
    <string name="tutorial_text">Place one of your fingers, preferably your index finger on the camera lens.\n
        Do not press to hard or you will cut of the circulation which allows the determination of the heart rate.\n
        You may have to wait several seconds for data capture and calculation.\n
        If your flash is not directly adjacent to your camera, you may adjust the recognition treshold in the Settings menu option.</string>
    <string name="settings">Settings</string>
    <string name="app_authors">René Bock / Pascal Zimmer</string>
    <string name="app_version">1.0</string>
    <string name="preference_threshold">Threshold of Red pixels</string>
    <string name="preference_threshold_key">threshold</string>
    <string name="preference_threshold_default">175</string>
    <string name="preference_threshold_summary">Current value is $1</string>
    <string name="preference_threshold_unit">Pixel</string>
    <string name="preference_threshold_title">Threshold</string>

    <string name="preference_graph_time">Graph scale time</string>
    <string name="preference_graph_time_key">graphTime</string>
    <string name="preference_graph_time_default">3000</string>
    <string name="preference_graph_time_summary">Current value is $1</string>
    <string name="preference_graph_time_unit">ms</string>
    <string name="preference_graph_time_title">Graph scale time</string>
</resources>
