<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <edu.pzrb.justbeatit.SeekBarPreference
        android:title="@string/preference_graph_time"
        android:key="@string/preference_graph_time_key"
        android:defaultValue="@string/preference_graph_time_default"
        android:max="10000"
        android:summary="@string/preference_graph_time_summary"
        android:text="@string/preference_graph_time_unit"
        android:dialogMessage="@string/preference_graph_time"
        />

    <edu.pzrb.justbeatit.SeekBarPreference
        android:defaultValue="@string/preference_threshold_default"
        android:dialogMessage="@string/preference_threshold"
        android:key="@string/preference_threshold_key"
        android:max="200"
        android:summary="@string/preference_threshold_summary"
        android:text="@string/preference_threshold_unit"
        android:title="@string/preference_threshold_title" />
</PreferenceScreen>